Complete implementation for EntryTableViewController

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ViewExistingEntry" rowHeight="89" id="gaI-BH-Zcf" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="89" id="gaI-BH-Zcf" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="89"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gaI-BH-Zcf" id="anK-fi-dDH">
@@ -53,7 +53,7 @@
                                     <outlet property="bodyTextLabel" destination="hRb-AV-yDI" id="0gj-uT-gA4"/>
                                     <outlet property="timestampLabel" destination="vb6-0T-bcL" id="DTZ-TV-u4V"/>
                                     <outlet property="titleLabel" destination="ugs-eq-T2L" id="ZKe-Gm-bfs"/>
-                                    <segue destination="Arp-9d-IHN" kind="show" id="eS7-G4-oUX"/>
+                                    <segue destination="Arp-9d-IHN" kind="show" identifier="ViewExistingEntry" id="eS7-G4-oUX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -143,6 +143,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="WwD-0n-meY"/>
+        <segue reference="eS7-G4-oUX"/>
     </inferredMetricsTieBreakers>
 </document>
