TVC cell: add entry variable and updateViews function
update label name

--- a/Core Data Journal/Core Data Journal/Base.lproj/Main.storyboard
+++ b/Core Data Journal/Core Data Journal/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                 <connections>
                                     <outlet property="bodyText" destination="q7C-8C-2ET" id="eUr-g2-ba3"/>
                                     <outlet property="entryTitle" destination="GLp-0f-ZNY" id="dpE-Ld-o1W"/>
-                                    <outlet property="timeStamp" destination="EZr-7l-GyQ" id="Vd0-c5-r5w"/>
+                                    <outlet property="timestamp" destination="EZr-7l-GyQ" id="DQe-cW-Grb"/>
                                     <segue destination="zbd-Os-swg" kind="show" identifier="ShowEntryDetail" id="rRT-2b-vd2"/>
                                 </connections>
                             </tableViewCell>
