Set segmented control's index in updateViews()

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -26,9 +26,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugs-eq-T2L">
-                                            <rect key="frame" x="16" y="8" width="61.5" height="29"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugs-eq-T2L">
+                                            <rect key="frame" x="16" y="8" width="52" height="29"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -48,6 +48,7 @@
                                     <constraints>
                                         <constraint firstItem="ugs-eq-T2L" firstAttribute="leading" secondItem="anK-fi-dDH" secondAttribute="leading" constant="16" id="A1x-Kq-5AT"/>
                                         <constraint firstItem="hRb-AV-yDI" firstAttribute="bottom" secondItem="anK-fi-dDH" secondAttribute="bottomMargin" id="CbA-9B-nJC"/>
+                                        <constraint firstItem="vb6-0T-bcL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ugs-eq-T2L" secondAttribute="trailing" constant="8" symbolic="YES" id="Jta-Ax-cOW"/>
                                         <constraint firstItem="hRb-AV-yDI" firstAttribute="leading" secondItem="anK-fi-dDH" secondAttribute="leadingMargin" id="NgN-VH-DYo"/>
                                         <constraint firstItem="hRb-AV-yDI" firstAttribute="top" secondItem="ugs-eq-T2L" secondAttribute="bottom" constant="6" id="QXK-4D-yjz"/>
                                         <constraint firstItem="vb6-0T-bcL" firstAttribute="trailing" secondItem="anK-fi-dDH" secondAttribute="trailingMargin" id="Z9M-ge-7zR"/>
